overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkereporting
  annotations:
    cert-manager.io/cluster-issuer: "bke-ci-eab"

spec:
  ingressClassName: nginx
  rules:
  - host: qa.bkereporting.apps.brown.edu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bkereporting
            port: 
              number: 8080
